style: fix icon color of collapse button in Sidebar

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -53,7 +53,7 @@
   justify-content: center;
   background: var(--inverted-bg-color);
   line-height: 0;
-  color: var(--color-white);
+  color: var(--bg-color);
 
   &_icon {
     width: 30px;
